--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -40,6 +40,7 @@
     <string name="stock_input_product">Product</string>
     <string name="stock_input_supplier">Supplier</string>
     <string name="stock_input_quantity_kg">Quantity (kg):</string>
+    <string name="stock_input_quantity_lbs">Quantity (lbs):</string>
     <string name="stock_input_quantity_boxes">Number of boxes:</string>
     <string name="stock_input_location">Location</string>
     <string name="stock_input_destination">Destination</string>
