--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,6 +32,10 @@
     <string name="stock_title">Stock</string>
     <string name="stock_empty">No stock to show</string>
     <string name="stock_new">Add new stock</string>
+
+    <string name="stock_product_search">Search for a product…</string>
+    <string name="stock_product_no_matches">No matching products found</string>
+    <string name="stock_product_no_products">No products added</string>
     <string name="stock_product_new">Add new product</string>
     <string name="stock_product_input_name">Name:</string>
     <string name="stock_product_meat_type">Type of meat</string>
