--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,6 +24,7 @@
     <string name="quality_good">Good</string>
     <string name="quality_pet_food">Pet food</string>
     <string name="quality_waste">Waste</string>
+    <string name="search_add_new">Add new %s…</string>
 
     <!-- Dashboard page -->
     <string name="dashboard_title">Dashboard</string>
@@ -34,7 +35,6 @@
     <string name="stock_new">Add new stock</string>
 
     <string name="stock_no_matches">No matching results found</string>
-    <string name="stock_add_new">Add new…</string>
     <string name="stock_product_new">Add new product…</string>
     <string name="stock_product_input_name">Name:</string>
     <string name="stock_product_meat_type">Type of meat</string>
