--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,6 +10,7 @@
     <string name="action_done">Done</string>
     <string name="action_cancel">Cancel</string>
     <string name="action_favourites">Favourites</string>
+    <string name="action_view_locations">View locations</string>
 
     <!-- Common data -->
     <string name="amount_kg">%.2f kg</string>
@@ -24,6 +25,9 @@
     <string name="quality_good">Good</string>
     <string name="quality_pet_food">Pet food</string>
     <string name="quality_waste">Waste</string>
+
+    <!-- db errors -->
+    <string name="db_error_insert">Error adding %s.</string>
 
     <!-- Search -->
     <string name="search_add_new">Add new %s…</string>
@@ -70,6 +74,8 @@
     <string name="locations_input_city">City:</string>
     <string name="locations_input_postcode">Postcode:</string>
     <string name="locations_input_country">Country:</string>
+
+    <string name="locations_empty">No locations to show</string>
 
     <!-- Contracts page -->
     <string name="contracts_title">Contracts</string>
