--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,8 +11,8 @@
     <string name="action_cancel">Cancel</string>
     <string name="action_favourites">Favourites</string>
     <string name="action_edit_locations">Edit locations</string>
-    <string name="action_edit_meat_types">Edit Meat Types</string>
-    <string name="action_edit_products">Edit Products</string>
+    <string name="action_edit_meat_types">Edit meat types</string>
+    <string name="action_edit_products">Edit products</string>
     <string name="action_yes">Yes</string>
     <string name="action_no">No</string>
 
@@ -74,7 +74,11 @@
     <string name="meat_types_empty">No meat types to show</string>
     <string name="meat_types_title">Meat Types</string>
 
-    <!-- Locations page -->
+    <!-- Edit products page -->
+    <string name="products_empty">No products to show</string>
+    <string name="products_title">Products</string>
+
+    <!-- Edit locations page -->
     <string name="locations_title">Locations</string>
     <string name="locations_supplier">Supplier</string>
     <string name="locations_storage">Storage</string>
