check if product safe to delete

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,6 +34,7 @@
     <!-- db errors -->
     <string name="db_error_insert">Error adding %s</string>
     <string name="db_error_delete_meat_type">Cannot delete %s while products still exist</string>
+    <string name="db_error_delete_product">Cannot delete %s while stock or contracts still exist</string>
 
     <!-- Search -->
     <string name="search_add_new">Add new %s…</string>
