--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -45,7 +45,8 @@
     <string name="input_error_blank">Cannot be blank</string>
     <string name="input_error_invalid">Invalid input</string>
     <string name="input_error_duplicate">Already added</string>
-    <string name="input_error_email_invalid">Invalid email</string>
+    <string name="input_error_invalid_email">Invalid email</string>
+    <string name="input_error_invalid_location_type">Invalid location type. Please select from the dropdown.</string>
 
     <!-- Snackbars -->
     <string name="snackbar_item_deleted">Item deleted</string>
