--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,13 +9,16 @@
     <string name="action_redo">Redo</string>
     <string name="action_done">Done</string>
     <string name="action_cancel">Cancel</string>
-    <string name="action_favourites">Favourites</string>
-    <string name="action_edit_locations">Edit locations</string>
-    <string name="action_edit_meat_types">Edit meat types</string>
-    <string name="action_edit_products">Edit products</string>
     <string name="action_yes">Yes</string>
     <string name="action_no">No</string>
     <string name="action_sort">Sort</string>
+
+    <!-- Menus -->
+    <string name="action_edit_locations">Edit locations</string>
+    <string name="action_edit_meat_types">Edit meat types</string>
+    <string name="action_edit_products">Edit products</string>
+    <string name="action_order_history">Order history</string>
+    <string name="action_favourites">Favourites</string>
 
     <!-- Common data -->
     <string name="amount_kg">%.2f kg</string>
