able to add multiple products to order

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -52,6 +52,7 @@
     <string name="input_error_invalid_location_type">Invalid location type. Please select from the dropdown.</string>
     <string name="input_error_stock_already_in_location">This product has already been added in this location.</string>
     <string name="input_error_time_must_be_future">Please select a time at least 10 minutes from now</string>
+    <string name="input_error_blank_date">Please select a date</string>
 
     <!-- Snackbars -->
     <string name="snackbar_item_deleted">Item deleted</string>
