--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -147,6 +147,11 @@
     <string name="contracts_dialog_repeat_interval_month">Every month</string>
     <string name="contracts_dialog_repeat_interval_custom">Custom</string>
 
+    <plurals name="contracts_repeat_interval_display">
+        <item quantity="one">Every %d %s</item>
+        <item quantity="other">Every %d %ss</item>
+    </plurals>
+
     <!-- Exchange page -->
     <string name="exchange_title">Exchange</string>
     <string name="exchange_choose_currencies">Choose currencies</string>
