--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -135,9 +135,10 @@
     <string name="contracts_input_quantity_lbs">Quantity (lbs)</string>
     <string name="contracts_input_quantity_boxes">Number of boxes</string>
     <string name="contracts_add_product">Add another product</string>
-    <plurals name="contracts_reminder_time">
-        <item quantity="one">Reminder: %d day before</item>
-        <item quantity="other">Reminder: %d days before</item>
+    <string name="contracts_reminder_day_before_one">day before</string>
+    <plurals name="contracts_reminder_days_before">
+        <item quantity="one">@string/contracts_reminder_day_before_one</item>
+        <item quantity="other">days before</item>
     </plurals>
 
     <string name="contracts_dialog_repeat_interval_title">Repeat every…</string>
