--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,7 +10,6 @@
     <string name="action_cancel">Cancel</string>
     <string name="action_yes">Yes</string>
     <string name="action_no">No</string>
-    <string name="action_sort">Sort</string>
     <string name="action_edit">Edit</string>
     <string name="action_refresh">Refresh</string>
 
@@ -20,6 +19,9 @@
     <string name="action_edit_locations">Edit locations</string>
     <string name="action_edit_meat_types">Edit meat types</string>
     <string name="action_edit_products">Edit products</string>
+    <string name="action_sort_by">Sort by</string>
+    <string name="action_sort_by_name">Sort by name</string>
+    <string name="action_sort_by_meat_type">Sort by meat type</string>
     <string name="action_order_history">Order history</string>
     <string name="action_favourites">Favourites</string>
 
